--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
   }
 }
