--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 MONGODB_URI =mongodb+srv://mohityoga2016:fVO5gmXIJByO4czO@cluster0.vufscyz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+SOLUTIONS_INFINI_API_URL:"https://api-voice.solutionsinfini.com/v1/",
+SOLUTIONS_INFINI_API_KEY:"A539b8a89ba294d176f01701f5ffd044f",
+KALYERA_API_URL:"https://api.kaleyra.io/v1/HXIN1751096165IN/messages",
+KALYERA_API_KEY:"A17d7d416a4abf01de27c9dc4107272ec",
+KALYERA_SENDER_NUMBER:"919094894948",
