--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI =mongodb+srv://mohityoga2016:fVO5gmXIJByO4czO@cluster0.vufscyz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI =mongodb+srv://mohityoga2016:fVO5gmXIJByO4czO@cluster0.vufscyz.mongodb.net/Cadabra?retryWrites=true&w=majority&appName=Cluster0
 SOLUTIONS_INFINI_API_URL=https://api-voice.solutionsinfini.com/v1/
 SOLUTIONS_INFINI_API_KEY=A539b8a89ba294d176f01701f5ffd044f
 KALYERA_API_URL=https://api.kaleyra.io/v1/HXIN1751096165IN/messages
