--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "form-data": "^4.0.1",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   }
 }
