--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ SOLUTIONS_INFINI_API_KEY=A539b8a89ba294d176f01701f5ffd044f
 KALYERA_API_URL=https://api.kaleyra.io/v1/HXIN1751096165IN/messages
 KALYERA_API_KEY=A17d7d416a4abf01de27c9dc4107272ec
 KALYERA_SENDER_NUMBER=919094894948
+GOOGLE_CLIENT_ID=58877353356-g7c3cjasthhq1cmo45njqqgsknspuus1.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+SESSION_SECRET=your-session-secret
