--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ KALYERA_SENDER_NUMBER=919094894948
 GOOGLE_CLIENT_ID=58877353356-g7c3cjasthhq1cmo45njqqgsknspuus1.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 SESSION_SECRET=your-session-secret
-NODE_ENV =test
+NODE_ENV =production
